Updated Header options

--- a/client/src/styles/Editor.scss
+++ b/client/src/styles/Editor.scss
@@ -209,7 +209,7 @@ audio.audio::-webkit-media-controls-panel {
     border-radius: 10px; 
 }
 
-h1.heading1{
+h1.heading{
     color: #333; 
     font-size: 40px; 
     font-family: 'Arial', sans-serif; 
@@ -219,7 +219,7 @@ h1.heading1{
     margin-bottom: 10px; 
 }
 
-h2.heading2{
+h2.heading{
   color: #333; 
   font-size: 30px; 
   font-family: 'Arial', sans-serif; 
@@ -229,7 +229,7 @@ h2.heading2{
   margin-bottom: 10px; 
 }
 
-h3.heading3{
+h3.heading{
   color: #333; 
   font-size: 20px; 
   font-family: 'Arial', sans-serif; 
