--- a/client/src/styles/Editor.scss
+++ b/client/src/styles/Editor.scss
@@ -177,8 +177,8 @@ div.elementContainer{
 }
 
 div.audioContainer{
-  border: 5px invisible orange;
-  height: 50px;
+  border: 5px solid orange;
+  height: 55px;
   //display: flex;
 }
 
